--- a/saara/WebContent/cadastrar.html
+++ b/saara/WebContent/cadastrar.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-
-</body>
+	<head>
+		<meta charset="ISO-8859-1">
+		<title>Cadastrar</title>
+	</head>
+	
+	<body>
+		<form action="Cadastro" method="post">
+			<label>Nome:</label>
+			<input>
+			
+			<label>Curso:</label>
+			<input>
+			
+			<label>Semestre:</label>
+			<input>
+		</form>		
+	</body>
 </html>
