adição de logo adição de bootstrap troca da versão tomcat

--- a/saara/WebContent/cadastrar.html
+++ b/saara/WebContent/cadastrar.html
@@ -2,7 +2,8 @@
   <html>
     <head>      
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">      
-      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>      
+      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="style/customStyle.css"  media="screen,projection"/>      
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
