--- a/saara/WebContent/logar.html
+++ b/saara/WebContent/logar.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
-  <html>
-    <head>      
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">      
-      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>      
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
+<html>
+	<head>      
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">      
+		<link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+		<link type="text/css" rel="stylesheet" href="style/customStyle.css"  media="screen,projection"/>
+		<link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap.min.css"  media="screen,projection"/>      
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	</head>
 
-    <body>      
-      <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
-      <div class="row">
-    <form class="col s12" action="Cadastro" method="post">
-     <div class="row">
-        <div class="input-field col s12">
-          <input id="email" name="email" type="email" class="validate">
-          <label for="email">Email</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="senha" name="senha" type="password" class="validate">
-          <label for="password">Senha</label>
-        </div>
-      </div>           
-    </form>
-  </div>
+	<body>      
+      	<script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+      	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+      	<div class="column side"></div>
+        <div class="column middle">
       
+	    	<div class="loginGrid">
+	    		<div align="center">
+	            	<img src="img/logo.png" class="imgLogo">
+	            </div>
+				<form class="col s12" action="Cadastro" method="post">
+					
+					<div class="row">
+				    	<div class="input-field col s12">
+					      	<input id="email" name="email" type="email" class="validate">
+					      	<label for="email">Email</label>
+				    	</div>
+				  	</div>
+					<div class="row">
+						<div class="input-field col s12">
+							<input id="senha" name="senha" type="password" class="validate">
+							<label for="password">Senha</label>
+						</div>
+					</div>           
+				</form>
+		  	</div>
+	  	</div>
+  		<div class="column side"></div>      
     </body>
-  </html>
+</html>
