--- a/saara/WebContent/cadastrar.html
+++ b/saara/WebContent/cadastrar.html
@@ -1,36 +1,46 @@
 <!DOCTYPE html>
-  <html>
-    <head>      
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">      
-      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
-      <link type="text/css" rel="stylesheet" href="style/customStyle.css"  media="screen,projection"/>      
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
+<html>
+<head>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css" media="screen,projection" />
+	<link type="text/css" rel="stylesheet" href="style/logar.css" media="screen,projection" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+</head>
 
-    <body>      
-      <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
-      <div class="row">
-    <form class="col s12" action="Cadastro" method="post">
-      <div class="row">
-        <div class="input-field col s6">
-          <input id="nome" name="nome" type="text" class="validate">
-          <label for="nome">Nome Completo</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="senha" name="senha" type="password" class="validate">
-          <label for="password">Senha</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="email" name="email" type="email" class="validate">
-          <label for="email">Email</label>
-        </div>
-      </div>      
-    </form>
-  </div>
-      
-    </body>
-  </html>
+<body>
+	
+	<div class="row" id="rowTelaToda">
+		<div class="col s6 push-s3 pull-s3" id="containerLogin">
+			
+			<div align="center" id="logoLogin">
+				<img src="img/logo.png" id="imgLogo">
+			</div>
+				
+			<div id="containerForm">
+				<form class="col s8 push-s2 pull-s2" action="Cadastro" method="post">
+					<div class="row">
+						<div class="input-field col s12">
+							<input id="nome" name="nome" type="text" class="validate">
+							<label for="nome">Nome Completo</label>
+						</div>
+					</div>
+					<div class="row">
+						<div class="input-field col s12">
+							<input id="senha" name="senha" type="password" class="validate">
+							<label for="password">Senha</label>
+						</div>
+					</div>
+					<div class="row">
+						<div class="input-field col s12">
+							<input id="email" name="email" type="email" class="validate">
+							<label for="email">Email</label>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+
+</body>
+</html>
