--- a/saara/WebContent/cadastrar.html
+++ b/saara/WebContent/cadastrar.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="ISO-8859-1">
+	<title>SAARA - Cadastro</title>
+	
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css" media="screen,projection" />
+	
+	<link type="text/css" rel="stylesheet" href="style/.css" media="screen,projection" />
 	<link type="text/css" rel="stylesheet" href="style/logar.css" media="screen,projection" />
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </head>
 
 <body>
-	
-	<div class="row" id="rowTelaToda">
+	<div class="row" id="preencherHorizontal">
 		<div class="col s6 push-s3 pull-s3" id="containerLogin">
 			
 			<div align="center" id="logoLogin">
