Continuando desenvolvimento da interface

--- a/saara/WebContent/paginas/anotacoes.xhtml
+++ b/saara/WebContent/paginas/anotacoes.xhtml
@@ -6,7 +6,7 @@
 	template="../templates/template.xhtml">
 
 	<ui:define name="estilos">
-		<link type="text/css" rel="stylesheet" href="../style/atividades.css" media="screen,projection" />
+		<link type="text/css" rel="stylesheet" href="../style/anotacoes.css" media="screen,projection" />
 	</ui:define>
 	
 	<ui:define name="titulo">Saara - Atividades</ui:define>
