--- a/saara/WebContent/paginas/aulas.xhtml
+++ b/saara/WebContent/paginas/aulas.xhtml
@@ -16,12 +16,12 @@
 		    <form class="col s12">
 				<div class="row">
    					<div class="input-field col s6">
-        				<input placeholder="Placeholder" id="first_name" type="text" class="validate"/>
-       					<label for="first_name">First Name</label>
+        				<input id="first_name" type="text" class="validate"/>
+       					<label for="first_name">Aula</label>
       				</div>
       				<div class="input-field col s6">
         				<input id="last_name" type="text" class="validate"/>
-        				<label for="last_name">Last Name</label>
+        				<label for="last_name">Professor</label>
       				</div>
       				
 		  			<div class="input-field col s12">
@@ -38,25 +38,83 @@
 				 	</div>
 			 	</div>
 			 	<label>Anotações</label><br/>
-			 	<div class="col 12">
-				 	<div class="col 4">
+			 	<div class="col s12">
+				 	<div class="col s4">
 					 	<div class="collection">
 					 	
-				        	<a href="#!" class="collection-item">Alvin</a>
-					        <a href="#!" class="collection-item active">Alvin</a>
-					        <a href="#!" class="collection-item">Alvin</a>
-					        <a href="#!" class="collection-item">Alvin</a>
+				        	<a href="#!" class="collection-item">Anotaçao1</a>
+					        <a href="#!" class="collection-item active">Anotaçao2</a>
+					        <a href="#!" class="collection-item">Anotaçao3</a>
+					        <a href="#!" class="collection-item">Anotaçao4</a>
 				      	</div>
 			      	</div>
-			      	<div class="col 8">
-			      		a
+			      	<div class="col s8 ">
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçaoTexto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçaoTexto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçaoTexto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
+			      		Texto da anotaçao
 			      	</div>
 		      	</div>
   			</form>
 		</div>
 	</ui:define>
+	
 	<ui:define name="conteudoDireita">
-		COnteudo atividades 2
+		<div class="row">
+			<div class="col s12">
+				<label>Aulas:</label>
+				<a class="waves-effect waves-light btn-small right  modal-trigger" href="#modalAdicionarAula"><i class="material-icons left">add</i>Adicionar</a>
+			</div>
+			<div class="col s12">
+				<div class="collection">
+	        		<a href="#!" class="collection-item">Aula1</a>
+			        <a href="#!" class="collection-item active">Aula2</a>
+			        <a href="#!" class="collection-item">Aula3</a>
+			        <a href="#!" class="collection-item">Aula4</a>
+		      	</div>
+			</div>
+		</div>
 	</ui:define>
 	
 </ui:composition>
