--- a/saara/WebContent/paginas/aulas.xhtml
+++ b/saara/WebContent/paginas/aulas.xhtml
@@ -23,6 +23,10 @@
         				<input id="last_name" type="text" class="validate"/>
         				<label for="last_name">Professor</label>
       				</div>
+      				<div class="input-field col s12">
+      					<label for="horarioAula">Horário da aula</label>
+      					<input id="horarioAula" type="text" class="timepicker"/>
+      				</div>
       				
 		  			<div class="input-field col s12">
 					   	<select multiple="multiple">
